GearsetPOC/force-app/main/default/objects/Invoice_LineRequest__c/Invoice_LineRequest__c.object-meta.xml
<CustomObject>
    <description>For Invoice Request</description>
    <label>Invoice_LineRequest</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>SlNo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice_LineRequests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>