GearsetPOC/force-app/main/default/objects/Invoice_LineRequest__c/fields/CostCentre__c.field-meta.xml
<CustomField>
    <fullName>CostCentre__c</fullName>
    <label>CostCentre</label>
    <length>10</length>
    <type>Text</type>
</CustomField>