GearsetPOC/force-app/main/default/objects/Invoice_LineRequest__c/fields/Line_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Line_Identifier__c</fullName>
    <label>LineIdentifier</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>