GearsetPOC/force-app/main/default/objects/Invoice_LineRequest__c/fields/ReqNumber__c.field-meta.xml
<CustomField>
    <fullName>ReqNumber__c</fullName>
    <label>ReqNumber</label>
    <length>30</length>
    <type>Text</type>
</CustomField>